# p2p_exchanger

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  docker-compose.yml  example.env  local.docker-compose.yml  pyproject.toml  requirements.txt
.do/: app.yaml  build_command.sh  deploy.template.yaml
certs/: gen-certs.sh
resource/: class_diagram
src/domain/: fiat.py  p2p.py
src/interfaces/aiogram/: config.py  constants.py  dialog.py  dialogs.py  handlers.py  main.py  middlewares.py  models.py  remote_service.py  widgets.py
src/interfaces/aiogram/exchange/: dialog.py  handlers.py  models.py  widgets.py
src/interfaces/fastapi/: api.py  container.py  main.py  schemas.py
src/interfaces/starlite/: container.py  controllers.py  logger.py  main.py  models.py
src/repository/: p2p_binance_repo.py
src/repository/binance_api/: models.py  p2p_api.py
src/services/: exchangers.py  p2p_exchangers.py
tests/domain/: test_fiat.py  test_p2p.py
tests/repository/: test_binance_api.py  test_models.py  test_repo.py
tests/services/: test_exchangers.py  test_p2p_exchangers.py
