[tool.poetry]
name = "p2p_exchanger_backend"
version = "0.1.0"
description = ""
authors = ["NABurov <naburov@greenatom.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
pydantic = "^1.10.2"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.20.1"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
