[tool.poetry]
name = "p2p_exchanger_backend"
version = "0.1.0"
description = ""
authors = ["NABurov <naburov@greenatom.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
pydantic = "^1.10.2"
fastapi-utils = "^0.2.1"
httpx = "^0.23.0"
humps = "^0.2.2"
uvicorn = "^0.19.0"
aiogram = "^2.22.2"
aiogram-dialog = "^1.9.0"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.20.1"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"
black = "^22.10.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
